--- a/.github/workflows/fail-workflow-2.yml
+++ b/.github/workflows/fail-workflow-2.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  intentional-fail-job-2:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
